Ran build for react, created 404 page

--- a/test.ipynb
+++ b/test.ipynb
@@ -70,6 +70,249 @@
     }
    },
    "outputs": [],
+   "source": [
+    "class Student {\n",
+    "    public int ID {get; set;}\n",
+    "    public string Name {get; set;}\n",
+    "    public string Gender {get; set;}\n",
+    "}\n",
+    "\n",
+    "List<Student> studentList = new List<Student>()\n",
+    "            {\n",
+    "                new Student(){ID = 1, Name = \"James\", Gender = \"Male\"},\n",
+    "                new Student(){ID = 2, Name = \"Sara\", Gender = \"Female\"},\n",
+    "                new Student(){ID = 3, Name = \"Steve\", Gender = \"Male\"},\n",
+    "                new Student(){ID = 4, Name = \"Pam\", Gender = \"Female\"}\n",
+    "            };"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "IQueryable<Student> students = studentList.AsQueryable().Where(_ => true);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th><i>index</i></th><th>ID</th><th>Name</th><th>Gender</th></tr></thead><tbody><tr><td>0</td><td><div class=\"dni-plaintext\">1</div></td><td>James</td><td>Male</td></tr><tr><td>1</td><td><div class=\"dni-plaintext\">3</div></td><td>Steve</td><td>Male</td></tr></tbody></table>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "students.Where<Student>(student => student.Gender.Equals(\"Male\")).Where<Student>(_ => true)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "IQueryable<Student> students = studentList.AsQueryable();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th><i>index</i></th><th>ID</th><th>Name</th><th>Gender</th></tr></thead><tbody><tr><td>0</td><td><div class=\"dni-plaintext\">1</div></td><td>James</td><td>Male</td></tr><tr><td>1</td><td><div class=\"dni-plaintext\">2</div></td><td>Sara</td><td>Female</td></tr><tr><td>2</td><td><div class=\"dni-plaintext\">3</div></td><td>Steve</td><td>Male</td></tr><tr><td>3</td><td><div class=\"dni-plaintext\">4</div></td><td>Pam</td><td>Female</td></tr></tbody></table>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "studentList.ToList()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public string HashPassword(string text) {\n",
+    "    using (var sha = new System.Security.Cryptography.HMACSHA512(Encoding.UTF8.GetBytes(\"hEY\")))\n",
+    "    {\n",
+    "        // Convert the string to a byte array first, to be processed\n",
+    "        byte[] textBytes = System.Text.Encoding.UTF8.GetBytes(text);\n",
+    "        byte[] hashBytes = sha.ComputeHash(textBytes);\n",
+    "        \n",
+    "        // Convert back to a string, removing the '-' that BitConverter adds\n",
+    "        string hash = BitConverter\n",
+    "            .ToString(hashBytes)\n",
+    "            .Replace(\"-\", String.Empty);\n",
+    "\n",
+    "        return hash;\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"dni-plaintext\">True</div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "HashPassword(\"Hello, love\").Equals(HashPassword(\"Hello, love\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "System.Collections.Generic.KeyNotFoundException: The given key 'sama' was not present in the dictionary.\n   at System.Collections.Generic.Dictionary`2.get_Item(TKey key)\n   at Submission#5.<<Initialize>>d__0.MoveNext()\n--- End of stack trace from previous location ---\n   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)",
+     "output_type": "error",
+     "traceback": [
+      "System.Collections.Generic.KeyNotFoundException: The given key 'sama' was not present in the dictionary.\n",
+      "   at System.Collections.Generic.Dictionary`2.get_Item(TKey key)\n",
+      "   at Submission#5.<<Initialize>>d__0.MoveNext()\n",
+      "--- End of stack trace from previous location ---\n",
+      "   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)"
+     ]
+    }
+   ],
+   "source": [
+    "Dictionary<string, string> myDict = new Dictionary<string, string>{\n",
+    "    {\"sam\", \"samuel\"}\n",
+    "};\n",
+    "myDict[\"sama\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "using System.Security.Claims;\n",
+    "Claim myClaim = new Claim(\"key\", \"value\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "key"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "myClaim.Type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [],
    "source": []
   }
  ],
